syntax = "proto3";
package tessornetwork.fury.documents;

// Options section
option go_package = "github.com/tessornetwork/fury/x/documents/types";

// Import section
import "gogoproto/gogo.proto";

message DocumentMetadataSchema {
  string URI = 1;
  string version = 2;
}

message DocumentMetadata {
	string contentURI = 1;
	//string schemaType = 2;
	DocumentMetadataSchema schema = 2;
}
  
